--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">EOYProject</string>
+    <string name="app_name">Routes Project 16230132</string>
     <string name="action_settings">Settings</string>
     <string name="button_nav">Navigate</string>
     <string name="button_complete">Complete</string>
     <string name="button_missed">Missed</string>
     <string name="title_activity_route_detail">route_detail</string>
-    <string name="title_activity_routes_detail">RoutesDetailActivity</string>
+    <string name="title_activity_routes_detail">Customer Detail</string>
 </resources>
